syntax = "proto3";

option csharp_namespace = "HRApi.Domain.GRPC.TemplateGRPC";

package Template;


service Template {
  rpc CreateTestTemplate (Id) returns (TestTemplate);
}


message TestTemplate{
	string title = 1;
	repeated Competence competencies = 2;
}


message Competence{
	string title = 1;
	int32  competence_need = 2;
	repeated Skill skills = 3;
}

message Skill{
	string title = 1;
	string test_module_link = 2;
	int32  skill_need = 3;
}

message Id {
  int32 template_id = 1;
  int32 cabinet_id = 2;
}

